Adds custom observable operator for querying properties from state and demonstrates a few ways of subscribing to these values in the component template

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
+<div>App Component State</div>
 <h1>{{ (state$ | async).direction }}</h1>
 <h1>{{ direction$ | async }}</h1>
+<h1>{{ direction2$ | async }}</h1>
+
 <button id="up">Up</button>
 <button id="down">Down</button>
